--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 
-<body class="welcome" id="bdy" onload="setTimeout(loader,100)">
+<body class="welcome" id="bdy" onload="setTimeout(loader,1000)">
 
 <div class="container-fluid h-100 w-100" id="preloader">
     <div class="position-absolute top-50 start-50 translate-middle" id="images">
@@ -157,42 +157,42 @@
                     <p class="wc wc-time">NOW</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/cloudyIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">6</p>
                 </div>
                 <div class="col">
                     <p class="wc wc-time">11 AM</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/humidityIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">7</p>
                 </div>
                 <div class="col">
                     <p class="wc wc-time">12 PM</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/rainyIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">7</p>
                 </div>
                 <div class="col">
                     <p class="wc wc-time">1 PM</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/sunnyIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">8</p>
                 </div>
                 <div class="col">
                     <p class="wc wc-time">2 PM</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/windyIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">6</p>
                 </div>
                 <div class="col">
                     <p class="wc wc-time">3 PM</p>
                     <p class="wc wc-bar">|</p>
                     <p class="wc wc-ic">|</p>
-                    <img class="wc wc-icon" src="img/weather_icons/cloudyIcon.svg">
+                    <img class="wc wc-icon">
                     <p class="wc wc-number">6</p>
                 </div>
             </div>
@@ -245,13 +245,13 @@
                 <div class="col-3 ctcrd" id="ctcrd1">
                     <div class="col m-3 ctt">
                         <h3>Dublin</h3>
-                        <h3><img class="card-icon temcic" src="img/weather_icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C
+                        <h3><img class="card-icon temcic" alt=""> 25&nbsp;&deg;C
                         </h3>
                     </div>
                     <div class="col-10 m-3 ct-cnt">
                         <h5>10:10 AM</h5>
                         <h5>23-July-2021</h5>
-                        <p><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" alt=""> 53%</p>
                         <p><img class="card-icon" src="img/weather_icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <img src="img/city_icons/dublin.svg" class="top-ctimg" alt="...">
@@ -259,13 +259,13 @@
                 <div class="col-3 ctcrd" id="ctcrd2">
                     <div class="col m-3 ctt">
                         <h3>Dublin</h3>
-                        <h3><img class="card-icon temcic" src="img/weather_icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C
+                        <h3><img class="card-icon temcic" alt=""> 25&nbsp;&deg;C
                         </h3>
                     </div>
                     <div class="col-10 m-3 ct-cnt">
                         <h5>10:10 AM</h5>
                         <h5>23-July-2021</h5>
-                        <p><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" alt=""> 53%</p>
                         <p><img class="card-icon" src="img/weather_icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <img src="img/city_icons/dublin.svg" class="top-ctimg" alt="...">
@@ -273,13 +273,13 @@
                 <div class="col-3 ctcrd" id="ctcrd3">
                     <div class="col m-3 ctt">
                         <h3>Dublin</h3>
-                        <h3><img class="card-icon temcic" src="img/weather_icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C
+                        <h3><img class="card-icon temcic" alt=""> 25&nbsp;&deg;C
                         </h3>
                     </div>
                     <div class="col-10 m-3 ct-cnt">
                         <h5>10:10 AM</h5>
                         <h5>23-July-2021</h5>
-                        <p><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" alt=""> 53%</p>
                         <p><img class="card-icon" src="img/weather_icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <img src="img/city_icons/dublin.svg" class="top-ctimg" alt="...">
@@ -287,13 +287,13 @@
                 <div class="col-3 ctcrd" id="ctcrd4">
                     <div class="col m-3 ctt">
                         <h3>Dublin</h3>
-                        <h3><img class="card-icon temcic" src="img/weather_icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C
+                        <h3><img class="card-icon temcic" alt=""> 25&nbsp;&deg;C
                         </h3>
                     </div>
                     <div class="col-10 m-3 ct-cnt">
                         <h5>10:10 AM</h5>
                         <h5>23-July-2021</h5>
-                        <p><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" alt=""> 53%</p>
                         <p><img class="card-icon" src="img/weather_icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <img src="img/city_icons/dublin.svg" class="top-ctimg" alt="...">
@@ -331,7 +331,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -344,7 +344,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -357,7 +357,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -370,7 +370,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -383,7 +383,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -396,7 +396,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -409,7 +409,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -422,7 +422,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -435,7 +435,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -448,7 +448,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -461,7 +461,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -474,7 +474,7 @@
             </div>
             <div class="col mx-3 cnt-cnt">
                 <h5>London, 10:10 AM </h5>
-                <h5><img class="card-icon" src="img/weather_icons/humidityIcon.svg" alt=""> 53%</h5>
+                <h5><img class="card-icon" alt=""> 53%</h5>
             </div>
             <div class="glow-wrap">
                 <i class="glow"></i>
@@ -496,10 +496,6 @@
 
 </div>
 </body>
-<script src="js/main.js"></script>
-<script src="js/T2001.js"></script>
-
-
 <script>
     function loader() {
         $('link[rel=stylesheet][href*="css/splash.css"]').remove();
@@ -508,11 +504,11 @@
         document.getElementById("bg").style.display = "block";
         document.getElementById("preloader").style.display = "none";
     }
-
-    //Splitting();
-    setTimeout(function () {
-        import ('/js/select.js');
-    }, 500);
 </script>
+
+<script src="js/T2001.js"></script>
+<script src="js/T2002.js"></script>
+<script src="js/T2003.js"></script>
+<script src="js/select.js"></script>
 
 </html>
