--- a/assets/index.html
+++ b/assets/index.html
@@ -535,6 +535,11 @@
     </div>
 
 </div>
+
+<audio id="athunder" hidden>
+    <source src="./assets/audio/athunder.mp3" type="audio/mpeg">
+</audio>
+
 </body>
 <script>
     function loader() {
